<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="110dp"
    android:padding="6dp"
    android:id="@android:id/list"
    android:background="@color/custom_listBackgroundOdd">

    <TextView
        android:id="@+id/list_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/def_date"
        android:textColor="#000"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/checkbox" />

    <TextView
        android:id="@+id/list_item_number_of_photos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textColor="#000"
        android:text="@string/def_no_p"
        android:textSize="18sp"
        android:layout_below="@+id/list_item_date"
        android:layout_toEndOf="@+id/checkbox" />

    <TextView
        android:id="@+id/list_item_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:text="@string/def_timer"
        android:textSize="18sp"
        android:layout_below="@+id/list_item_number_of_photos"
        android:layout_toEndOf="@+id/checkbox" />

    <TextView
        android:id="@+id/list_item_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:gravity="center_vertical"
        android:text="@string/def_distance"
        android:textSize="18sp"
        android:layout_below="@+id/list_item_timer"
        android:layout_toEndOf="@+id/checkbox" />

    <Button
        android:id="@+id/view_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:text="@string/viewm"
        android:textAllCaps="false"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/view_photos_button" />

    <Button
        android:id="@+id/view_photos_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:textAllCaps="false"
        android:text="@string/viewp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:checked="false"
        android:id="@+id/checkbox"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>