<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/sky"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="28sp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text2"
        android:gravity="center"
        android:text="@string/remember_your_journey"
        android:layout_marginTop="5dp"
        android:textColor="#222"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_below="@+id/welcome_text"
        android:layout_alignStart="@+id/welcome_text" />
    <Button
        android:id="@+id/welcome_button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:text="@string/snjourney"
        android:textAllCaps="false"
        android:textColor="#000"
        android:layout_marginBottom="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
    <Button
        android:id="@+id/welcome_button2"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:text="@string/ojourney"
        android:textAllCaps="false"
        android:textColor="#000"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/welcome_button" />
</RelativeLayout>